--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </section>
 
     <footer>
-        <p>Feito com ❤ pelos monitores. <br>Desenvolvido por <a href="luizerl.com">Luiz Eduardo.</a></p>
+        <p>Feito com ❤ pelos monitores. <br>Desenvolvido por <a href="http://luizerl.com">Luiz Eduardo.</a></p>
     </footer>
 </body>
 </html>
