Adding new pages and fixing responsiveness

--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/05efc4f42a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./style.css">
-    <title>AED - Resoluções</title>
+    <title>Algoritmos e Estruturas de Dados - 2022/1</title>
 </head>
 <body>
     <main>
@@ -16,58 +17,58 @@
                 <ul>
                     <li><a href="./index.html">Home</a></li>
                     <li><a href="./monitoria.html">Monitoria</a></li>
+                    <li><a href="./sobre.html">Sobre</a></li>
                 </ul>
             </nav>
-            <h1>Algoritmos e Estrutura de Dados</h1>
+            <h1>Algoritmos e Estruturas de Dados</h1>
             <p>Apresentar ao  aluno  as  mais  importantes  estruturas  de  dados  e  seus algoritmos, permitindo  assim  o  desenvolvimentode  conhecimentos,  habilidades,competênciase autonomiapara  o  desenvolvimento  de  soluções algorítmicas  eficientes  para  uso em sistemas  computacionais,especialmente  em  redes  de comunicação  e  na  computação  de dados.</p>
-            <p>Última resolução disponível:</p>
             <a href="#modulo-1" class="button">
             Lista de POO
             </a>
         </div>
+        <div class="img">
+            <img src="./img/linus.jpg" alt="">
+        </div>
         <div class="quote">
-            <div class="img">
-                <img src="./img/linus.jpg" alt="">
-            </div>
             <blockquote>
-                <h3>“Bad programmers worry about the code. Good programmers worry about data structures and their relationships.” </h3>
+                <h3>"Maus programadores se preocupam com o código. Bons programadores se preocupam com <span>estruturas de dados</span> e seus relacionamentos.” </h3>
                 <p>― Linus Torvalds</p>
             </blockquote>
-
-            
         </div>
     </main>
 
     <section id="modulos">
         <div class="info">
-            <h1>Resoluções das Listas</h1>
-            <p>As resoluções das listas semanais estarão disponíveis no prazo mínimo de 24 após a entrega da mesma. As soluções foram propostas e revisidas pelos monitores.</p>
+            <h1>Conteúdo</h1>
+            <p>Ao longo do semestre iremos ir postando as resoluções das listas semanais na página de listas. Além disso, pretendemos colocar um FAQ para que os alunos possam de vez em quando dá uma conferida. Uma página com exemplos de projetos computacionais será alimentada ao final do semestre, podendo seu projeto estar nessa página. Além disso, uma guia com conteúdos adicionais será aos poucos alimentada.</p>
         </div>
         <div class="container">
-            <a href="./listas/lista-1.html"  id="modulo-1" class="modulo">
-                <h3>Programação Orientada à Objetos</h3>
-                <p>Classes, atributos, métodos, herança, polimorfismo...</p>
+            <a href="./listas.html"  id="modulo-1" class="modulo">
+                <i class="fa-solid fa-laptop-code"></i>
+                <h3>Listas</h3>
+                <p>Resoluções das Listas.</p>
             </a>
-            <a href="#"  id="modulo"class="modulo">
-                <h3>Buscas</h3>
-                <p>Linear, com sentinela, binária.</p>
+            <a href="./faq.html"  id="modulo"class="modulo">
+                <i class="fa-regular fa-circle-question"></i>
+                <h3>FAQ</h3>
+                <p>Perguntas frequentes.</p>
             </a>
-            <a href="#"  id="modulo"class="modulo">
-                <h3>Estruturas Lineares</h3>
-                <p>Pilhas, Filas, Listas</p>
+            <a href="./projetos.html"  id="modulo"class="modulo">
+                <i class="fa-solid fa-person-chalkboard"></i>
+                <h3>Projetos Computacionais</h3>
+                <p>Exemplos de projetos dos semestres anteriores.</p>
             </a>
-            <a href="#"  id="modulo"class="modulo">
-                <h3>Estruturas Lineares</h3>
-                <p>Duplamente Encadeada</p>
+            <a href="./material.html"  id="modulo"class="modulo">
+                <i class="fa-solid fa-book"></i>
+                <h3>Material Adicional</h3>
+                <p>Vídeos, artigos e textos adicionais.</p>
             </a>
-            <a href="#"  id="modulo"class="modulo">
-                <h3>Ordenação</h3>
-                <p>Bubble Sort, Quick Sort, Merge Sort</p>
-            </a>
-            <a href="#"  id="modulo"class="modulo">
-                <h3>Árvores</h3>
-                <p>Binárias, n-árias e busca</p>
-            </a>
+
+            <div  id="modulo"class="modulo modulo-hover">
+                <h3>"Qualquer idiota consegue escrever um código que um computador entenda. Bons programadores escrevem códigos que humanos conseguem entender"</h3>
+                <p>― Martin Fowler.</p>
+            </div>
+            
         </div>
     </section>
 
