line-height fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="modulos">
         <div class="info">
             <h1>Conteúdo</h1>
-            <p>Ao longo do semestre iremos ir postando as resoluções das listas semanais na página de listas. Além disso, pretendemos colocar um FAQ para que os alunos possam de vez em quando dá uma conferida. Uma página com exemplos de projetos computacionais será alimentada ao final do semestre, podendo seu projeto estar nessa página. Além disso, uma guia com conteúdos adicionais será aos poucos alimentada.</p>
+            <p>Ao longo do semestre postaremos as resoluções das listas semanais na página <a href="/listas.html" target="_blank">listas</a>. Além disso, pretendemos colocar um FAQ para que os alunos possam de vez em quando dá uma conferida. Uma página com exemplos de projetos computacionais será alimentada ao final do semestre, podendo seu projeto estar nessa página. Além disso, uma guia com conteúdos adicionais será aos poucos alimentada.</p>
         </div>
         <div class="container">
             <a href="./listas.html"  id="modulo-1" class="modulo">
