--- a/monitoria.html
+++ b/monitoria.html
@@ -40,7 +40,7 @@
                         <p>Presencial</p>
                     </div>
                     <ul>
-                        <li><i class="fa-solid fa-calendar"></i>Às quinta-feiras</li>
+                        <li><i class="fa-solid fa-calendar"></i>As quintas-feiras</li>
                         <li><i class="fa-solid fa-clock"></i>14hrs às 15h30min</li>
                         <li><i class="fa-solid fa-location-dot"></i>Aquário - FT</li>
                     </ul>
@@ -55,9 +55,9 @@
                         <p>Presencial</p>
                     </div>
                     <ul>
-                        <li><i class="fa-solid fa-calendar"></i>À definir</li>
-                        <li><i class="fa-solid fa-clock"></i>À definir</li>
-                        <li><i class="fa-solid fa-location-dot"></i>À definir</li>
+                        <li><i class="fa-solid fa-calendar"></i>A definir</li>
+                        <li><i class="fa-solid fa-clock"></i>A definir</li>
+                        <li><i class="fa-solid fa-location-dot"></i>A definir</li>
                     </ul>
                 </div>
     
