changing main image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </a>
         </div>
         <div class="img">
-            <img src="./img/linus.jpg" alt="">
+            <img src="./img/silicon-valley.png" alt="">
         </div>
         <div class="quote">
             <blockquote>
